--- a/rentout.ES.html
+++ b/rentout.ES.html
@@ -170,16 +170,16 @@
             <label for="fname">Nombre</label>
           </div>
           <div class="col-75">
-            <input type="text" id="fname" name="firstname" placeholder="Tu nombre... " required>
+            <input type="text" id="name" name="name" placeholder="Tu nombre... " required>
           </div>
         </div>
 
         <div class="form-row">
           <div class="col-25">
-            <label for="lname">Apellido</label>
+            <label for="email">Email</label>
           </div>
           <div class="col-75">
-            <input type="text" id="lname" name="lastname" placeholder="Tu apellido... " required>
+            <input type="text" id="emailaddress" name="emailaddress" placeholder="Tu correo electrónico... " required>
           </div>
         </div>
 
