Adding onclick to searchapartment.ES.html

--- a/searchapartment.html
+++ b/searchapartment.html
@@ -287,7 +287,7 @@
         <a target="_blank" href="assets/Images/bathroom.jpg">
       <img src="assets/Images/bathroom.jpg" alt="Bathroom Apartment" width="300" height="150">
     </a>
-        <div class="type">Private room with Bathroom</div> 
+        <div class="type">Private room</div> 
         <span>
         <div class="bedrooms">
         <i class="fa fa-bed"></i> 1 Bedroom
